update: games and docs
