# model/model.go
@@ -4,17 +4,11 @@ import (
 	"main/model/db"
 )
 
-// TODO Not working
 // GetSth is used to get something from database.
 // The "something" must fulfil interface "sth", which has method "TableName" and "GetKey".
 func GetSth[T sth](value T) T {
 	pk, id := value.GetKey()
 	db.DB.Find(&value, pk+" = ?", id)
-	return value
-}
-
-func GetFromUsers(value db.User) db.User {
-	db.DB.Table(db.TableNameUser).Find(&value, "nick_name = ?", value.NickName)
 	return value
 }
 
@@ -33,8 +27,31 @@ func DeleteSth[T sth](value T) {
 	db.DB.Table(value.TableName()).Delete(&value)
 }
 
+func GetManySth[T sth](value T) ([]T, int) {
+	pk, id := value.GetKey()
+	data := make([]T, 100)
+	result := db.DB.Table(value.TableName()).Where(pk+" = ?", id).Scan(data)
+	return data, int(result.RowsAffected)
+}
+
 func GetProposals(uid int) ([]db.ProposalInfo, int) {
 	data := make([]db.ProposalInfo, 100)
 	result := db.DB.Table(db.TableNameProposalInfo).Where("uid = ?", uid).Scan(data)
 	return data, int(result.RowsAffected)
+}
+
+func GetFromUsers(value db.User) db.User {
+	db.DB.Table(db.TableNameUser).Find(&value, "nick_name = ?", value.NickName)
+	return value
+}
+
+func GetGames(value db.Game) []db.Game {
+	data := make([]db.Game, 100)
+	db.DB.Table(value.TableName()).Where(
+		"venue = ?", value.Venue,
+	).Find(&data,
+		"time LIKE ? or crowd LIKE ?",
+		value.Time, value.Crowd,
+	).Limit(99)
+	return data
 }
