# model/response.go
@@ -1,8 +1,16 @@
 package model
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/gin-gonic/gin"
+)
 
 var NoResponse = gin.H{
 	"code":    200,
 	"message": "null",
+}
+
+type LoginResponse struct {
+	Code    int         
+	ID      int
+	Token   string
 }
