# model/struct.go
@@ -10,7 +10,12 @@ type QNconfig struct {
 }
 
 type sth interface {
-	db.User | db.Template | db.ProposalInfo | db.Tag | db.Question
+	db.User | db.Template | db.ProposalInfo | db.Tag | db.Question | db.Game
 	TableName() string
 	GetKey() (string, int)
+}
+
+type LoginRequest struct{
+	NickName    string `json:"nick_name"`        // 最多七个汉字
+	Auth        string `json:"auth"`
 }
