# router/router.go
@@ -3,7 +3,7 @@ package router
 import (
 	/* "html/template" 完美*/
 	"main/handler"
-	"main/service"
+	"main/router/middleware"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -14,37 +14,29 @@ func Register(e *gin.Engine) {
 		c.String(http.StatusNotFound, "The incorrect API router.")
 	})
 
-	e.POST("/login", handler.Login)       //登录 test pass
-	e.POST("/register", handler.Register) // test pass
-
 	v1 := e.Group("/api/v1")
 	{
-		v1.Use(service.GetToken)
+		v1.POST("/login", handler.Login)       // test pass
+		v1.POST("/register", handler.Register) // test pass
+		v1.Use(middleware.TokenParser)
 		users := v1.Group("/users")
 		{
-			users.GET("/", handler.GetUserInfo)    //获取用户信息
-			users.POST("/", handler.UploadProfile) //上传更新
-			users.POST("/photo", handler.UploadPhoto)
+			users.GET("", handler.GetUserInfo)   //获取用户信息
+			users.PUT("", handler.UploadProfile) //上传更新
+			users.PUT("/photo", handler.UploadPhoto)
 			users.GET("/myproject", handler.Getprojects)
 		}
 		project := v1.Group("/project")
 		{
-			// TODO newproject
-			project.GET("/", handler.Getproject)          //获取项目信息
-			project.POST("/", handler.UpdateProject)      //更新项目
-			project.GET("/template", handler.GetTemplate) //获取模板
-            project.POST("/newproject",handler.CreateProject) //新建项目
-			}  
+			project.GET("", handler.Getproject)                //获取项目信息
+			project.PUT("", handler.UpdateProject)             //更新项目
+			project.GET("/template", handler.GetTemplate)      //获取模板
+			project.POST("/newproject", handler.CreateProject) //新建项目
+			games := project.Group("/games")
+			{
+				games.GET("", handler.GameSelect)
+				games.POST("/find", handler.FindGames)
+			}
+		}
 	}
-
-	/* projects := users.Group("/projects")
-	{
-		projects.GET("/", handler.Getprojects) //获取项目信息
-	}
-	proshare := e.Group("/share")
-	{
-		proshare.GET("/", handler.Getproject)    //获取分享项目
-		proshare.POST("/", handler.Uptables) //上传“我”的信息
-	}*/
-
 }
